[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/PactMenu.gd" type="Script" id=2]

[node name="PactMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -71.0
margin_right = 95.5
margin_bottom = 71.0

[node name="Flavor" type="Label" parent="VBoxContainer"]
margin_right = 191.0
margin_bottom = 14.0
text = "The demon offers you a deal."
align = 1
valign = 1

[node name="PactName" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 191.0
margin_bottom = 32.0
text = "Pact description"
align = 1
valign = 1

[node name="PactDetails" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 191.0
margin_bottom = 50.0
text = "Pact description"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 191.0
margin_bottom = 74.0

[node name="ConfirmPact" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
text = "Make a deal"

[node name="DismissPact" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 191.0
margin_bottom = 20.0
text = "Maybe later..."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConfirmPact" to="." method="_on_ConfirmPact_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DismissPact" to="." method="_on_DismissPact_pressed"]
